--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "0.16.2",
+    "axios": "^0.19.0",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
@@ -21,11 +21,11 @@
     "babel-preset-es2017": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "compression": "1.7.0",
+    "compression": "^1.7.4",
     "concurrently": "3.5.0",
-    "express": "4.15.4",
+    "express": "^4.17.1",
     "express-http-proxy": "1.0.6",
-    "lodash": "4.17.4",
+    "lodash": "^4.17.15",
     "nodemon": "1.19.0",
     "npm-run-all": "4.1.1",
     "react": "16.0.0",
